# non_anonymous_submission

./: .gitignore  README.md  REPRODUCE.md
mceval/: .gitignore  README.md  pyproject.toml
mceval/configs/: README.md  paths.example.yaml  run_metadata.example.yaml
mceval/docs/: EXPERIMENTS.md  LLAMA_CROSS_FAMILY.md  PHASE0_COMPLETE.md  PHASE1_COMPLETE.md  PHASE4_RESULTS.md  PIPELINE_RUNBOOK.md  PROJECT_ROADMAP.md  RESULTS.md  STATUS.md  WORKFLOW.md  phase0_findings.md  phase1_findings.md  phase2_plan.md  phase3_plan.md
mceval/manifest/: README.md  split_manifest.csv
mceval/scripts/: README.md  bootstrap_dirs.py  build_corpus.py  build_curves.py  build_manifest.py  build_sft_dataset.py  check_sft_dataset.py  compress_corpus.py  cot_code_split.py  count_degeneration.py  inspect_runaways.py  join_energy.py  length_by_category.py  merge_lora.py  monitor_gpu.py  monitor_pdu.py  phase0_empirical_checks.py  phase1_gates.py  plot_answer_breakdown.py  plot_answer_breakdown_in_budget.py  plot_cot_boxplot.py  plot_cot_code_by_outcome.py  plot_cot_distribution.py  plot_cot_vs_gamma.py  plot_curves.py  plot_outcome_breakdown.py  quality_breakdown.py  reparse_trajectories.py  run_energy_sweep.py  run_inference.py  run_pipeline.py  score_generations.py  show_config.py  smoke_contract_extractor.py  validate_compression.py  validate_knob.py  verify_mceval_docker.py  watch_sweep.py
mceval/tests/: test_compression.py  test_config.py  test_contract.py  test_energy.py  test_eval.py  test_eval_join.py  test_gates.py  test_inference.py  test_manifest.py  test_mceval_data.py  (+2 more)
(+96 files in other folders)
